--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ body {
 
 .apps:hover img {
     /*border: 1px solid #333;*/
-    transform: scale(1.07);
+    transform: scale(1.03);
     /*opacity: 0.3;*/
 }
 
@@ -307,14 +307,14 @@ body {
     position: relative;
     float: left;
     width: 387px;
-    height: 218px;
+    height: 238px;
     overflow: hidden;
     margin: 10px;
 }
 
 .apps-img  {
     width: 100%;
-    height: 100%;
+    height: 218px;
     -moz-transition: all 0.3s;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
@@ -534,8 +534,8 @@ body {
         float: none;
         margin-left: auto;
         margin-right: auto;
-        width: 500px;
-        height: 330px;
+        /*width: 500px;*/
+        /*height: 282px;*/
     }
 }
 
@@ -587,10 +587,20 @@ body {
         margin-left: auto;
         margin-right: auto;
         max-width: 320px;
-        max-height: 220px;
+        max-height: 180px;
         /*min-width: 320px;*/
         /*min-height: 220px;*/
         /*margin: 5px 0;*/
+    }
+
+    .apps-img  {
+        height: 160px;
+    }
+
+    .apps-txt {
+        height: 60px;
+        line-height: 60px;
+        font-size: 20px;
     }
 
     #header {
